--- a/ASP.NET-MVC/Template/Template/Template.csproj
+++ b/ASP.NET-MVC/Template/Template/Template.csproj
@@ -203,6 +203,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Bus\NhaSanXuatBus.cs" />
     <Compile Include="Models\Bus\SanPhamBus.cs" />
     <Compile Include="Models\Generated\Database.cs">
       <AutoGen>True</AutoGen>
@@ -520,6 +521,9 @@
     <Content Include="Template\themes\less\wells.less" />
     <Content Include="Views\SanPham\Index.cshtml" />
     <Content Include="Views\SanPham\Details.cshtml" />
+    <Content Include="Views\Shared\_NhaSanXuat.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Shared\_SideBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
