--- a/ASP.NET-MVC/Template/Template/Template.csproj
+++ b/ASP.NET-MVC/Template/Template/Template.csproj
@@ -197,12 +197,15 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoaiSanPhamController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NhaSanXuatController.cs" />
     <Compile Include="Controllers\SanPhamController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Bus\LoaiSanPhamBus.cs" />
     <Compile Include="Models\Bus\NhaSanXuatBus.cs" />
     <Compile Include="Models\Bus\SanPhamBus.cs" />
     <Compile Include="Models\Generated\Database.cs">
@@ -524,6 +527,9 @@
     <Content Include="Views\Shared\_NhaSanXuat.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Shared\_SideBar.cshtml" />
+    <Content Include="Views\NhaSanXuat\Index.cshtml" />
+    <Content Include="Views\LoaiSanPham\Index.cshtml" />
+    <Content Include="Views\Shared\_LoaiSanPham.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
