--- a/ASP.NET-MVC/Template/Template/Template.csproj
+++ b/ASP.NET-MVC/Template/Template/Template.csproj
@@ -259,6 +259,7 @@
     <Content Include="Template\themes\bootshop\bootstrap.min.css" />
     <Content Include="Template\themes\businessltd\bootstrap.min.css" />
     <Content Include="Template\themes\cerulean\bootstrap.min.css" />
+    <Content Include="Template\themes\css\menupage.css" />
     <Content Include="Template\themes\css\base.css" />
     <Content Include="Template\themes\css\bootstrap-responsive.min.css" />
     <Content Include="Template\themes\css\font-awesome-ie7.css" />
@@ -525,7 +526,6 @@
     <Content Include="Views\SanPham\Index.cshtml" />
     <Content Include="Views\SanPham\Details.cshtml" />
     <Content Include="Views\Shared\_NhaSanXuat.cshtml" />
-    <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Shared\_SideBar.cshtml" />
     <Content Include="Views\NhaSanXuat\Index.cshtml" />
     <Content Include="Views\LoaiSanPham\Index.cshtml" />
