--- a/ASP.NET-MVC/Template/Template/Template.csproj
+++ b/ASP.NET-MVC/Template/Template/Template.csproj
@@ -530,6 +530,7 @@
     <Content Include="Views\NhaSanXuat\Index.cshtml" />
     <Content Include="Views\LoaiSanPham\Index.cshtml" />
     <Content Include="Views\Shared\_LoaiSanPham.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
